<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_borde">
    <LinearLayout
        android:id="@+id/llPregunta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fondo"
        android:layout_margin="@dimen/marcoExterior"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teclea_la_f_mula"
            android:textAlignment="center"
            android:textSize="@dimen/tamanoTextoEstandar"
            android:textColor="@color/color_texto"/>
        <EditText
            android:id="@+id/etFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintFormula"
            android:textSize="@dimen/tamanoTextoEstandar"
            android:inputType="textCapCharacters"/>
        <Button
            android:id="@+id/btnComprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comprobar"
            android:onClick="onClickAct2"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llContinuar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fondo"
        android:layout_margin="@dimen/marcoExterior"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desea_continuar"
            android:textAlignment="center"
            android:textSize="@dimen/tamanoTextoEstandar"
            android:layout_margin="@dimen/tamanoTextoEstandar"
            android:textColor="@color/color_texto"/>
        <RadioGroup
            android:id="@+id/rgOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/rbSi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>
        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuar"
            android:onClick="onClickAct2"/>

    </LinearLayout>
</LinearLayout>